adicionado a funcao do eventListaner o scroll mais a logica de identificar se o Scrol está próximo do final da pagina , caso o retorno seja positivo a funcao exiba o lodar será chamada e exibira a animação por 1 segundo e logo apos ira sumir

--- a/src/style.css
+++ b/src/style.css
@@ -120,9 +120,15 @@ h1 {
   0%,
   100% {
     transform: translateY(0);
+
   }
 
   50% {
     transform: translateY(-10px);
+    background-color: green;
+  }
+  25% {
+    transform: translateY(-10px);
+    background-color: rgb(0, 30, 128);
   }
 }
